# python-sdk

./: .gitignore  README.md  pyproject.toml  setup.py
boringmetrics/: __init__.py  client.py  constants.py  errors.py  lives.py  logs.py  transport.py  utils.py
scripts/: build.py  release.py
