[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boringmetrics"
description = "Python SDK for Boring Metrics"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Aymeric Chauvin", email = "contact@halftheopposite.dev"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/boringmetrics/python-sdk"
"Bug Tracker" = "https://github.com/boringmetrics/python-sdk/issues"
